--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:Vincent@mymail.sutd.edu.sg">email</a></li>
+	        		<li><a href="mailto:Vincent@mymail.sutd.edu.sg">Vincent@mymail.sutd.edu.sg</a></li>
 	        		<li><a href="https://github.com/Vincentcent1">github.com/Vincentcent1</a></li>
 				</ul>
 			</footer>
